[package]
name = "wasm-crate"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.33.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d","console"] }
console_error_panic_hook = "0.1"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }

